kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: drupal
  labels:
    project: drupal-aws
    managed-by: kubectl
