kubernetes/drupal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  namespace: drupal
spec:
  selector:
    app: drupal
  ports:
    - port: 9000
      targetPort: 9000
