kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: drupal
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
